<resources>
    <string name="app_name">library_main</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_head">上传头像</string>
    <string name="user_name">姓名</string>
    <string name="user_phone">手机号</string>
    <string name="user_age">年龄</string>
    <string name="user_address">地址</string>
    <string name="year">岁</string>
    <string name="old_password">旧密码</string>
    <string name="sure_password">确认新密码</string>
    <string name="sure_change">确认修改</string>
    <string name="add_manager">添加</string>
    <string name="user_setting">我的设置</string>
    <string name="message_notice">消息通知</string>
    <string name="submit_settlement">确认核算</string>
    <string name="confirm_the_settlement">确认结算</string>
    <string name="order_information">订单信息</string>
    <string name="user_position">职务</string>
    <string name="historical_record">历史纪录</string>
    <string name="order_setting">订单设置</string>
    <string name="out_login">注销登录</string>
    <string name="mixing_plant_maintenance">搅拌站维护</string>

    <string name="cancel">取消</string>
    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year1">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="about_app">关于砼哒哒</string>
    <string name="accept_list">接单列表</string>
    <string name="order_pic">订单图片</string>
    <string name="price_setting">单价设置</string>
    <string name="update_logo">上传logo</string>
    <string name="logistics_maintenance">物流公司维护</string>
    <string name="driver_manager">司机管理</string>
    <string name="car_manager">车辆管理</string>
    <string name="update_car_pic">上传车辆照片</string>
    <string name="car_no">车牌号码</string>
    <string name="driver">司机</string>
    <string name="car_brand">车辆品牌</string>
    <string name="purchase_time">购置时间</string>
    <string name="car_type">车辆型号</string>
    <string name="travlled_distance">行驶里程</string>
    <string name="car_load">核定载重</string>
    <string name="car_time">保险到期时间</string>
    <string name="add_car">添加车辆</string>
    <string name="sure_add">确认添加</string>
    <string name="add_driver">添加司机</string>
    <string name="update_driver_pic">上传头像</string>
    <string name="identity_card">身份证</string>
    <string name="driving_years">驾龄</string>
    <string name="drivering_age">年龄</string>
    <string name="driver_address">地址</string>
    <string name="confirm_submit">确认提交</string>
    <string name="select_car">选择车辆</string>
    <string name="submit_add">确认添加</string>
    <string name="select_driver">选择司机</string>
    <string name="manay_order">更多订单</string>
    <string name="accet_order">接单列表</string>
    <string name="apply_settlement">申请核算</string>
</resources>
