<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/_ffe06e38">

        <ImageView
            android:id="@+id/register_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/back_tv"
            android:textColor="@color/FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_42"
            android:layout_marginTop="@dimen/dp_11"
            android:text="@string/back"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:textColor="@color/FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/user_info"
            android:textSize="@dimen/sp_18" />
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="@dimen/dp_13"
            android:layout_gravity="center"
            android:text="@string/update_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/user_ico"
            android:padding="@dimen/dp_5"
            android:src="@mipmap/user_sample"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_width="@dimen/dp_69"
            android:layout_height="@dimen/dp_69" />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginLeft="@dimen/dp_13"
        android:background="@color/_E0E0E0"
        android:layout_width="match_parent"
        android:layout_height="1dp">

    </View>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44">
        <TextView
            android:layout_marginLeft="@dimen/dp_13"
            android:text="@string/user_name"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/user_name"
            android:layout_marginRight="@dimen/dp_13"
            android:gravity="right"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginLeft="@dimen/dp_13"
        android:background="@color/_E0E0E0"
        android:layout_width="match_parent"
        android:layout_height="1dp">

    </View>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44">
        <TextView
            android:layout_marginLeft="@dimen/dp_13"
            android:text="@string/user_phone"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/user_phone"
            android:layout_marginRight="@dimen/dp_13"
            android:gravity="right"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginLeft="@dimen/dp_13"
        android:background="@color/_E0E0E0"
        android:layout_width="match_parent"
        android:layout_height="1dp">

    </View>
    <LinearLayout
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44">
        <TextView
            android:layout_marginLeft="@dimen/dp_13"
            android:text="@string/user_age"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/user_age"
            android:layout_marginRight="@dimen/dp_13"
            android:gravity="right"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/year"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/dp_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:visibility="gone"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginLeft="@dimen/dp_13"
        android:background="@color/_E0E0E0"
        android:layout_width="match_parent"
        android:layout_height="1dp">

    </View>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44">
        <TextView
            android:layout_marginLeft="@dimen/dp_13"
            android:text="@string/user_address"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/user_address"
            android:layout_marginRight="@dimen/dp_13"
            android:gravity="right"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginLeft="@dimen/dp_13"
        android:background="@color/_E0E0E0"
        android:layout_width="match_parent"
        android:layout_height="1dp">

    </View>
    <TextView
        android:gravity="center"
        android:textColor="@color/FFFFFF"
        android:text="@string/sure_change"
        android:layout_marginBottom="@dimen/dp_20"
       android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_200"
        android:id="@+id/sure_change"
        android:background="@drawable/shape_login"
        android:layout_width="@dimen/dp_302"
        android:layout_height="@dimen/dp_42" />
</LinearLayout>