<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/_ffe06e38">

        <ImageView
            android:id="@+id/register_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/back_tv"
            android:textColor="@color/FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_42"
            android:layout_marginTop="@dimen/dp_11"
            android:text="@string/back"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:textColor="@color/FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/user_setting"
            android:textSize="@dimen/sp_18" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/order_setting"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44">

        <TextView
            android:textColor="@color/_333333"
            android:textSize="@dimen/sp_14"
            android:layout_weight="1"
            android:text="@string/order_setting"
            android:layout_marginLeft="@dimen/dp_9"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:src="@mipmap/go"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@color/_E0E0E0"
        android:layout_width="match_parent"
        android:layout_height="1dp">

    </View>
    <LinearLayout
        android:id="@+id/out_login"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44">

        <TextView
            android:textColor="@color/_333333"
            android:textSize="@dimen/sp_14"
            android:layout_weight="1"
            android:text="@string/out_login"
            android:layout_marginLeft="@dimen/dp_9"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:src="@mipmap/go"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@color/_E0E0E0"
        android:layout_width="match_parent"
        android:layout_height="1dp">

    </View>
</LinearLayout>